[tool.poetry]
name = "python-telegram-bot-exapmle"
version = "0.1.0"
description = ""
authors = ["Your Name jjjjackson"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
python-telegram-bot = "^20.4"
telegram = "^0.0.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
urllib3 = "1.26.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
